Preparation and Planing Documents added to the github